manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navatech-assignment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: navatech-assignment.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navatech-assignment
            port:
              number: 80
